[metadata]
licence = MIT
licence_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
install_requires =
    ensure
    py-youtube
python_requires = >=3.10

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    black
    tox

[options.package_data]
mypy_lib = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py